--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -22,7 +22,7 @@ body {
   float: left;
   color: #f2f2f2;
   text-align: center;
-  padding: 3px 3px;
+  padding: 5px 3px;
   font-weight: 600;
   text-decoration: none;
   font-size: 35px;
@@ -213,7 +213,7 @@ p {
   #sign-up[type="submit"] {width: 180px; height: 45px; font-size: 20px;}
   #email[type="text"] {width: 360px; height: 42px; background-size: 30px;}
   p {font-size: 16px;width: auto;margin: 20 auto; display:flex; justify-content: center;}
-  h2 {font-size: 20px;}
+  h2 {font-size: 25px;}
   #footer {
     width: auto;
     padding: auto;
